# goit-pycore-hw-final-gr3

./: .gitignore  README.md  contacts.json  main.py  notes.json  pyproject.toml  storage.py
cli/: colors.py  commands.py  errors.py  repl.py
handlers/: contact_handlers.py  decorators.py  note_handlers.py
models/: address_book.py  fields.py  note.py  notebook.py  record.py
tests/: conftest.py  test_address_book.py  test_colors.py  test_commands.py  test_contact_handlers.py  test_fields.py  test_main.py  test_note_handlers.py  test_notebook.py  test_record.py  test_storage.py
