[project]
name = "goit-pycore-hw-final-gr3"
version = "0.1.0"
description = "GoIT PyCore final group project #3."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["colorama>=0.4"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "N", "I"]
